--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             </article>
             
             <article class="home__card">
-              <img src="./src/assets/home-beach.jpg" alt="home image" class="home__card-img">
+              <img src="./src/assets/img/home-beach.jpg" alt="home image" class="home__card-img">
               <h3 class="home__card-title"></h3>
               <div class="home__card-shadow"></div>
             </article>
@@ -121,7 +121,7 @@
           </div>
 
           <div class="about__image">
-            <img src="./src/assets/about-beach.jpg" alt="about image" class="about__img">
+            <img src="./src/assets/img/about-beach.jpg" alt="about image" class="about__img">
             <div class="about__shadow"></div>
           </div>
         </div>
