Alterando imagem-explore

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
           </div>
 
           <div class="join__image">
-            <img src="./src/assets/join-island.jpg" alt="" class="join__img">
+            <img src="./src/assets/img/join-island.jpg" alt="" class="join__img">
             <div class="join__shadow"></div>
           </div>
         </div>
