alterando fotos e posicionamente

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <header class="header" id="header">
     <nav class="nav container">
       <a href="" class="nav__logo">
-          Ocean<span class="span__logo">BLUE</span>
+          Blue<span class="span__logo">OCEAN</span>
       </a>
 
       <div class="nav__menu" id="nav-menu">
@@ -59,11 +59,11 @@
         <div class="home__container container grid">
           <div class="home__data">
             <h3 class="home__subtitle">
-              Welcome to Ocean<span class="span__logo">BLUE</span>
+              Welcome to Blue<span class="span__logo">OCEAN</span>
             </h3>
 
             <h1 class="home__title">
-              Explore <span class="span__logo">the Ocean</span> <br>with us
+              Explore <span class="span__logo">o Oceano</span> <br>conosco
             </h1>
 
             <p class="home__description">
@@ -71,7 +71,7 @@
             </p>
 
             <a href="#" class="button">
-              Start your journey <i class="ri-arrow-right-line"></i>
+              Inicie sua jornada <i class="ri-arrow-right-line"></i>
             </a>
           </div>
           
@@ -108,7 +108,7 @@
         <div class="about__container container grid">
           <div class="about__data">
             <h2 class="section__title">
-              Learn more <br> About us
+              Aprenda mais <br> sobre a Blue<span class="span__logo">OCEAN</span>
             </h2>
 
             <p class="about__description">
@@ -116,12 +116,12 @@
             </p>
 
             <a href="#" class="button">
-              Explore more <i class="ri-arrow-right-line"></i>
+              Explore mais <i class="ri-arrow-right-line"></i>
             </a>
           </div>
 
           <div class="about__image">
-            <img src="./src/assets/img/about-beach.jpg" alt="about image" class="about__img">
+            <img src="./src/assets/img/about-beach.jpeg" alt="about image" class="about__img">
             <div class="about__shadow"></div>
           </div>
         </div>
@@ -133,16 +133,16 @@
           Enjoy the beauty <br>
           of the Ocean
         </h2>
-
+ 
         <div class="popular__container container grid">
           <article class="popular__card">
             <div class="popular__image">
-              <img src="./src/assets/img/photo-gs-2.jpg" alt="popular image" class="popular__img">
+              <img src="./src/assets/img/photo-gs-9.jpg" alt="popular image" class="popular__img">
               <div class="popular__shadow"></div>
             </div>
 
             <h2 class="popular__title">
-              
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt doloremque omnis obcaecati non magnam? Dignissimos voluptas sed dolores recusandae officiis, voluptate, similique ex quam, hic aperiam totam voluptatibus iure rerum!
             </h2>
 
             <div class="popular__location">
@@ -153,7 +153,7 @@
 
           <article class="popular__card">
             <div class="popular__image">
-              <img src="./src/assets/img/photo-gs-5.jpg" alt="popular image" class="popular__img">
+              <img src="./src/assets/img/photo-gs-4.jpg" alt="popular image" class="popular__img">
               <div class="popular__shadow"></div>
             </div>
 
@@ -240,7 +240,7 @@
           </div>
 
           <div class="join__image">
-            <img src="./src/assets/img/join-island.jpg" alt="" class="join__img">
+            <img src="./src/assets/img/photo-gs-29.jpg" alt="" class="join__img">
             <div class="join__shadow"></div>
           </div>
         </div>
