alterando dados e imagens

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </h3>
 
             <h1 class="home__title">
-              Explore <span class="span__logo">o Oceano</span> <br>conosco
+              Explore o <span class="span__logo">Oceano</span> <br>conosco
             </h1>
 
             <p class="home__description">
@@ -137,7 +137,7 @@
         <div class="popular__container container grid">
           <article class="popular__card">
             <div class="popular__image">
-              <img src="./src/assets/img/photo-gs-9.jpg" alt="popular image" class="popular__img">
+              <img src="./src/assets/img/photo-gs-30.jpg" alt="popular image" class="popular__img">
               <div class="popular__shadow"></div>
             </div>
 
@@ -146,7 +146,7 @@
             </h2>
 
             <div class="popular__location">
-              <i class="ri-map-pin-line"></i>
+              <i class="ri-recycle-fill"></i>
               <span></span>
             </div>
           </article>
@@ -162,7 +162,7 @@
             </h2>
 
             <div class="popular__location">
-              <i class="ri-map-pin-line"></i>
+              <i class="ri-recycle-fill"></i>
               <span></span>
             </div>
           </article>
@@ -178,7 +178,7 @@
             </h2>
 
             <div class="popular__location">
-              <i class="ri-map-pin-line"></i>
+              <i class="ri-recycle-fill"></i>
               <span></span>
             </div>
           </article>
@@ -209,8 +209,8 @@
             </div>
 
             <div class="explore__user">
-              <img src="./src/assets/img/explore-perfil.png" alt="explore image" class="explore__perfil">
-              <span class="explore__name">Leonardo Barbosa</span>
+              <img src="./src/assets/img/photo-gs-28.jpg" alt="explore image" class="explore__perfil">
+              <span class="explore__name"></span>
             </div>
           </div>
         </div>
@@ -230,11 +230,11 @@
             </p>
 
             <form action="" class="join__form">
-              <input type="name" placeholder="Enter your name" class="join__input">
-              <input type="email" placeholder="Enter your email" class="join__input">
+              <input type="name" placeholder="Escreva seu nome" class="join__input">
+              <input type="email" placeholder="Escreva seu email" class="join__input">
 
               <button class="join__button button">
-                Sign up for our newsletter <i class="ri-send-plane-fill"></i>
+                Inscreva-se para nossas noticias<i class="ri-send-plane-fill"></i>
               </button>
             </form>
           </div>
