--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
           <li class="nav__item">
             <a href="#explore" class="nav__link">Explore</a>
           </li>
+
+          <li class="nav__item">
+            <a href="#join" class="nav__link">Sign up</a>
+          </li>
         </ul>
 
           <!-- close button -->
@@ -67,7 +71,7 @@
             </h1>
 
             <p class="home__description">
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates corrupti inventore, nulla, voluptatibus molestiae eos ut laborum fuga dolor harum dolorum, facilis culpa? Tempora officiis cupiditate dolorum, in fuga tempore!
+              A solução que iremos te apresentar é a melhor para você que deseja explorar o oceano e descobrir as maravilhas que ele tem a oferecer.
             </p>
 
             <a href="#" class="button">
@@ -217,7 +221,7 @@
      </section>
      
      <!--==================== JOIN ====================-->
-     <section class="join section">
+     <section class="join section" id="join">
         <div class="join__container container grid">
           <div class="join__data">
             <h2 class="section__title">
