Adicionando textos a estrutura

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             </h2>
 
             <p class="about__description">
-              Conscientizar as pessoas a preservar o meio ambiente 
+              Desenvolvimento de um projeto abrangente para monitorar, informar e engajar o público na preservação dos oceanos.
             </p>
 
             <a href="#" class="button">
@@ -148,7 +148,7 @@
               Tecnologia - 
             </h2>
             <p>
-              drones
+              Drones, sensores, plataforma online de monitoramento, inteligência artificial (persona), sistema de doações e assistente virtual.
             </p>
 
             <div class="popular__location">
@@ -164,8 +164,11 @@
             </div>
 
             <h2 class="popular__title">
-              Objetivos -
+              Objetivo -
             </h2>
+            <p>
+              Combater a poluição marinha e promover a conscientização ambiental.
+            </p>
 
             <div class="popular__location">
               <i class="ri-recycle-fill"></i>
@@ -182,6 +185,9 @@
             <h2 class="popular__title">
               Publico Alvo -
             </h2>
+            <p>
+              Comunidade em geral interessada na preservação ambiental, voluntários, doadores e aqueles que desejam aprender mais sobre a temática ambiental.
+            </p>
 
             <div class="popular__location">
               <i class="ri-recycle-fill"></i>
@@ -203,14 +209,24 @@
             <div class="explore__data">
               <h2 class="section__title">
                 Explore -<br> Beneficios oferecidos
-                
               </h2>
-
               <p class="explore__description">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero necessitatibus placeat rerum expedita reiciendis quos excepturi, dolorem facere consequatur quod, porro quaerat? Hic deserunt vel illo! Tempore perferendis possimus soluta. <br>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore qui accusamus, fuga in harum aut nam dignissimos vitae rerum alias, animi recusandae debitis deleniti atque adipisci eaque nostrum odit saepe!
-                Odit qui sed fuga deleniti consequuntur labore distinctio expedita cum quidem, magni, veniam soluta, perspiciatis molestias similique ab recusandae assumenda vel. Aperiam vero delectus vitae atque nam dolores incidunt ab. <br>
-                Eligendi nulla et atque necessitatibus commodi assumenda vel nostrum, illo veritatis, maxime autem, iure ea architecto! Vitae placeat ab fugiat provident ad, veritatis molestiae incidunt facilis nulla odio saepe minima!
+                Detecção precisa e em tempo real de pontos de poluição nos oceanos. <br>
+                Acesso a dados atualizados sobre a situação dos oceanos. <br>
+                Participação ativa na preservação ambiental através de voluntariado remunerado. <br>
+                Comunicação mais eficaz das questões ambientais através de uma persona com inteligência artificial. <br>
+                Oportunidade de contribuir financeiramente para expedições e iniciativas de retirada de plásticos das águas. <br>
+                Acesso fácil a recursos educativos e conscientização sobre a importância da preservação dos oceanos. <br>
+                Engajamento lúdico através de um quiz interativo sobre a temática ambiental.
+              </p> <br>
+              <h2 class="section__title">
+                Como ajudara no dia a dia das pessoas -
+              </h2>
+              <p class="explore__description">
+                Oferece uma plataforma para informar sobre a situação dos oceanos em tempo real. <br>
+                Facilita a participação ativa na preservação ambiental através de voluntariado remunerado. <br>
+                Possibilita contribuições financeiras para iniciativas de limpeza dos oceanos. <br>
+                Promove uma maior conscientização sobre a importância da preservação ambiental de forma educativa e lúdica.
               </p>
             </div>
 
@@ -232,7 +248,7 @@
             </h2>
 
             <p class="join__description">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente, maiores sunt? Sit esse recusandae consectetur eligendi tenetur illum id voluptatum pariatur voluptas sint adipisci fugit possimus, odit distinctio corrupti perspiciatis?
+              
             </p>
 
             <form action="" class="join__form">
@@ -258,7 +274,7 @@
      <div class="footer__container container grid">
       <div class="footer__content grid">
         <div>
-          <a href="#" class="footer__logo">Ocean<span class="span__logo">BLUE</span></a>
+          <a href="#" class="footer__logo">Blue<span class="span__logo">OCEAN</span></a>
 
           <p class="footer__description">
             Explore o oceano conosco e<br>
@@ -370,7 +386,7 @@
         </div>
 
         <span class="footer__copy">
-          &#169; 2024 Ocean<span class="span__logo">BLUE.</span> All right reserved
+          &#169; 2024 Blue<span class="span__logo">OCEAN.</span> All right reserved
         </span>
       </div>
      </div>
