--- a/index.html
+++ b/index.html
@@ -250,9 +250,9 @@
               
             </p>
 
-            <form action="" class="join__form">
-              <input type="name" placeholder="Escreva seu nome" class="join__input">
-              <input type="email" placeholder="Escreva seu email" class="join__input">
+            <form action="" class="join__form" onsubmit="showAlert()">
+              <input type="name" id="name" placeholder="Escreva seu nome" class="join__input">
+              <input type="email" id="email" placeholder="Escreva seu email" class="join__input">
 
               <button class="join__button button">
                 Sign up for our newsletters<i class="ri-send-plane-fill"></i>
