Alterando dados do index

--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
           <div class="join__data">
             <h2 class="section__title">
               Faça parte do time <br>
-              ajude-nos a preservar o oceano
+              ajude a preservar o oceano
             </h2>
 
             <p class="join__description">
